# spIIder

./: package-lock.json
backend/: .gitignore  langgraph.json  pyproject.toml
backend/Browser/: spiider_browser.py  spooderman_browser.py
backend/app/: browser_manager.py  deep_research_agent.py  main.py  research_agent.py  task_agent.py
backend/marking_scripts/: final_marking.js  marking.js  marking_buttons.js  marking_buttons_2.js  marking_input.js  marking_links.js  text_editor.js
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/rover/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/rover/: QueryInput.tsx  ResponseActions.tsx  ResponseDisplay.tsx
frontend/src/components/ui/: ParticlesBackground.tsx  SpotlightCard.tsx  ToggleSwitch.tsx
